syntax = "proto3";

package protomodel;

enum TaskState {
  UNKWNOWN = 0;
  PENDING = 1;
  RECEIVED = 2;
  STARTED = 3;
  RETRY = 4;
  SUCCESS = 5;
  FAILURE = 6;
}


message TaskError {
  int32 code = 1;
  string format = 2;
  map<string, string> params = 3;

}

message TaskStateResponse {
  TaskState State = 1;
  int32 ETA = 2;
  string Uid = 3;
  TaskError Error = 4;
}
